--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<img src="images/profile.png" width="200px" alt="Manuel profile picture">
  		<h1>Manuel Parra</h1>
 		<p><em>Founder and CTO of <strong>SysPartners</strong>.</em></p>
-		<p>I am an iOS and Web Developer. I love coffee, green tea and black tea.</p>
+		<p>I am a Web Developer. I love coffee and green tea.</p>
 		<hr>
 		<h3>University Studies</h3>
 		<ul>
@@ -39,40 +39,36 @@
 			</li>
 		</ul>
 		<hr>
-		<h3>Profeissional Experience</h3>
+		<h3>Professional Experience</h3>
 		<ul>
-			<li>In March 2021 I started working as <a href="https://es.wikipedia.org/wiki/Estaci%C3%B3n_base" target="_blank">
-					<em>Assistant Installation Technician</em></a>, installing mobile phone radiant systems with Huawei brand equipment
+			<li>In March 2021 I started working as <em>Assistant Installation Technician</em>, installing mobile phone radiant systems with Huawei brand equipment
 					for Orange and Vodafone, performing work at heights, commissioning and integration of equipment and performing the documentation of the work.
 				<ul>
-					<li><em><a href="" target="_blank">OFG Adquisiciones e Ingeniería, S.L.</a></em>&nbsp;03/2021-Present. Spain</li>
+					<li><em><a href="https://www.ofg.es/" target="_blank">OFG Adquisiciones e Ingeniería, S.L.</a></em>&nbsp;03/2021 - Present. Spain</li>
 				</ul>
 			</li>
 			<br>
-			<li>In December 2016 I started working as <a href="" target="_blank"><em>Sales Supervisor</em>, managing the operation of the Call Center sub channel, ensuring compliance
+			<li>In December 2016 I started working as <em>Sales Supervisor</em>, managing the operation of the Call Center sub channel, ensuring compliance
 					with the administrative and operational processes necessary to achieve the sales KPIs.
 				<ul>
-					<li><em><a href="https://www.pepsico.co.ve/" target="_blank">PepsiCo Alimentos S.C.A.</a></em>&nbsp;12/2016-04/2018. Venezuela</li>
+					<li><em><a href="https://www.pepsico.co.ve/" target="_blank">PepsiCo Alimentos S.C.A.</a></em>&nbsp;12/2016 - 04/2018. Venezuela</li>
 				</ul>
 			</li>
 			<br>
-			<li>In March 2014 I started working as a <a href="https://es.wikipedia.org/wiki/An%C3%A1lisis_de_datos" target="_blank">
-					<em>Statistics Analyst</em></a> in the Go To Market department, my main functions were to give visibility to the sales
-					force of the KPIs on a daily basis, generate reports, reports and weekly presentations to management.
+			<li>In March 2014 I started working as a <em>Statistics Analyst</em> in the Go To Market department, my main functions were to give visibility
+					to the sales force of the KPIs on a daily basis, generate reports, reports and weekly presentations to management.
 				<ul>
-					<li><em></em></li>
+					<li><em><a href="https://www.pepsico.co.ve/" target="_blank">PepsiCo Alimentos S.C.A.</a></em>&nbsp;03/2014 - 12/2016. Venezuela</li>
 				</ul>
 			</li>
-			<li>
+			<br>
+			<li>In December 2012 I started working as a <em>Sales Analyst</em>, my main functions were to report on sales KPIs, follow up on sales
+					indicators and give visibility to the sales force on the evolution of its management at the local level.
 				<ul>
-					<li><em></em></li>
+					<li><em><a href="https://www.pepsico.co.ve/" target="_blank">PepsiCo Alimentos S.C.A.</a></em>&nbsp;12/2012 - 03/2014. Venezuela</li>
 				</ul>
 			</li>
-			<li>
-				<ul>
-					<li><em></em></li>
-				</ul>
-			</li>
+			<br>
 			<li>In March 2007 I started working as a <a href="https://es.wikipedia.org/wiki/T%C3%A9cnico_de_sistemas"><em>Computer Technician</em></a>, performing preventive maintenance
 					of hardware, assembly of desktop computers, installation of applications and I was performing
 					store assistant tasks.
