--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li>
 						<em><a href="http://www.unefa.edu.ve/" target="_blank">National Experimental Polytechnic
-								University of the Armed Forces</a></em>.&nbsp;2007-2012. Venezuela
+								University of the Armed Forces</a></em>.&nbsp;2007 - 2012. Venezuela
 					</li>
 				</ul>
 			</li>
@@ -33,7 +33,7 @@
 				<ul>
 					<li>
 						<em><a href="https://www.unir.edu.ve/" target="_blank">Readic University Institute of
-								Technology</a></em>.&nbsp;2003-2006. Venezuela
+								Technology</a></em>.&nbsp;2003 - 2006. Venezuela
 					</li>
 				</ul>
 			</li>
@@ -69,14 +69,62 @@
 				</ul>
 			</li>
 			<br>
-			<li>In March 2007 I started working as a <a href="https://es.wikipedia.org/wiki/T%C3%A9cnico_de_sistemas"><em>Computer Technician</em></a>, performing preventive maintenance
-					of hardware, assembly of desktop computers, installation of applications and I was performing
-					store assistant tasks.
+			<li>In November 2011 I started my <em>Professional Internship</em> for my degree. Project: Technology Management for wireless connection
+					between PLC and remote modules. It was proposed to develop a wireless interface to communicate via radio links an Allen Bradley PLC
+					with remote FlexIO modules under the Ethernet/IP protocol. FlexIO modules under the Ethernet/IP protocol. Electrical Maintenance Department.
 				<ul>
-					<li><em>EasyConnections</em>. 03/2007-08/2007</li>
+					<li><em>Productora de Sal C.A.</em>&nbsp;11/2011 - 01/2012. Venezuela</li>
 				</ul>
 			</li>
 			<br>
+			<li>In August 2007 I started working as a freelance <em>Software Developer</em>, developing an ERP system for plant maintenance management and developing a system for the registration of sample analysis in the laboratory and for Process Control.
+				<ul>
+					<li><em>Productora de Sal C.A.</em>&nbsp;08/2007 - 11/2012. Venezuela</li>
+				</ul>
+			</li>
+			<br>
+			<li>In March 2007 I started working as a <a href="https://es.wikipedia.org/wiki/T%C3%A9cnico_de_sistemas" target="_blank"><em>Computer Technician</em></a>, performing preventive maintenance
+					of hardware, assembly of desktop computers, installation of applications and I was performing
+					store assistant tasks.
+				<ul>
+					<li><em>EasyConnections C.A.</em>&nbsp;03/2007 - 08/2007. Venezuela</li>
+				</ul>
+			</li>
+			<br>
+		</ul>
+		<hr>
+		<h3>Complementary studies</h3>
+		<ul>
+			<li>In February 2021 I completed the <a href="https://www.coursera.org/account/accomplishments/certificate/664THLNW6U5D" target="_blank">
+					<em>Server Side Development: NodeJS, Express and MongoDB</em></a> course, which required approximately 5 or 6 hours/week of classes
+					and obtained a grade of 99.50%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/desarrollo-lado-servidor-nodejs-express-mongodb" target="_blank">
+							<em>Austral University. Coursera.</em></a>&nbsp;2021. Online
+					</li>
+				</ul>
+			</li>
+			<br>
+			<li>In November 2019 I completed the <a href="https://www.coursera.org/account/accomplishments/certificate/UM763MB7AKXJ" target="_blank">
+					<em>Web development with Angular</em></a> course, which required approximately 5 hours/week of classes and obtained a grade of 99.50%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/desarrollar-paginas-web-con-angular" target="_blank">
+							<em>Austral University. Coursera.</em></a>&nbsp;2019. Online
+					</li>
+				</ul>
+			</li>
+			<br>
+			<li>In October 2019 I completed the <a href="https://www.coursera.org/account/accomplishments/certificate/3SQ5CYNLY9TK" target="_blank">
+					<em>Web Page Design with Bootstrap 4</em></a> course, which required approximately 5 hours/week of classes and obtained a grade of 99.62%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/disenando-paginas-bootstrap4" target="_blank">
+							<em>Austral University. Coursera.</em></a>&nbsp;2019. Online
+					</li>
+				</ul>
+			</li>
 		</ul>
 	</body>
 </html>
