--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 		<hr>
 		<h3>Complementary studies</h3>
 		<ul>
-			<li>In February 2021 I completed the <a href="https://www.coursera.org/account/accomplishments/certificate/664THLNW6U5D" target="_blank">
-					<em>Server Side Development: NodeJS, Express and MongoDB</em></a> course, which required approximately 5 or 6 hours/week of classes
+			<li>In February 2021 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/664THLNW6U5D" target="_blank">
+					<em>Server Side Development: NodeJS, Express and MongoDB</em></a>, which required approximately 5 or 6 hours/week of classes
 					and obtained a grade of 99.50%.
 				<ul>
 					<li>
@@ -106,8 +106,8 @@
 				</ul>
 			</li>
 			<br>
-			<li>In November 2019 I completed the <a href="https://www.coursera.org/account/accomplishments/certificate/UM763MB7AKXJ" target="_blank">
-					<em>Web development with Angular</em></a> course, which required approximately 5 hours/week of classes and obtained a grade of 99.50%.
+			<li>In November 2019 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/UM763MB7AKXJ" target="_blank">
+					<em>Web development with Angular</em></a>, which required approximately 5 hours/week of classes and obtained a grade of 99.50%.
 				<ul>
 					<li>
 						<a href="https://www.coursera.org/learn/desarrollar-paginas-web-con-angular" target="_blank">
@@ -116,8 +116,8 @@
 				</ul>
 			</li>
 			<br>
-			<li>In October 2019 I completed the <a href="https://www.coursera.org/account/accomplishments/certificate/3SQ5CYNLY9TK" target="_blank">
-					<em>Web Page Design with Bootstrap 4</em></a> course, which required approximately 5 hours/week of classes and obtained a grade of 99.62%.
+			<li>In October 2019 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/3SQ5CYNLY9TK" target="_blank">
+					<em>Web Page Design with Bootstrap 4</em></a>, which required approximately 3 hours/week of classes and obtained a grade of 99.62%.
 				<ul>
 					<li>
 						<a href="https://www.coursera.org/learn/disenando-paginas-bootstrap4" target="_blank">
@@ -125,7 +125,50 @@
 					</li>
 				</ul>
 			</li>
+			<br>
+			<li>In February 2019 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/VKK7TBCRU3PC" target="_blank">
+					<em>Using Databases with Python</em></a>, which required approximately 3 hours/week of classes and obtained a grade of 100%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/python-databases" target="_blank">
+							<em>University of Michigan. Coursera.</em></a>&nbsp;2019. Online
+					</li>
+				</ul>
+			</li>
+			<br>
+			<li>In January 2019 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/E9Y98FNWPA3C" target="_blank">
+					<em>Using Python to Access Web Data</em></a>, which required approximately 3 hours/week of classes and obtained a grade of 100%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/python-network-data" target="_blank">
+							<em>University of Michigan. Coursera.</em></a>&nbsp;2019. Online
+					</li>
+				</ul>
+			</li>
+			<br>
+			<li>In December 2018 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/VSQ5Z5K8XZNP" target="_blank">
+					<em>Python Data Structures</em></a>, which required approximately 3 hours/week of classes and obtained a grade of 100%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/python-data" target="_blank">
+							<em>University of Michigan. Coursera.</em></a>&nbsp;2018. Online
+					</li>
+				</ul>
+			</li>
+			<br>
+			<li>In March 2018 I completed the course <a href="https://www.coursera.org/account/accomplishments/certificate/QNG249PZ4HNA" target="_blank">
+					<em>Programming for Everybody (Getting Started with Python)</em></a>, which required approximately 4 hours/week of classes and obtained a grade of 100%.
+				<ul>
+					<li>
+						<a href="https://www.coursera.org/learn/python-data" target="_blank">
+							<em>https://www.coursera.org/learn/python</em></a>&nbsp;2018. Online
+					</li>
+				</ul>
+			</li>
 		</ul>
+		<!--
+		<hr>
+		<h3>Technical Skills</h3> -->
 	</body>
 </html>
 
