Add contact information

--- a/index.html
+++ b/index.html
@@ -166,9 +166,25 @@
 				</ul>
 			</li>
 		</ul>
-		<!--
 		<hr>
-		<h3>Technical Skills</h3> -->
+		<h3>Professional skills</h3>
+		<ul>
+			<li>Pro-active, good communication skills, ability to work in a team and work under pressure.</li>
+			<li>Microsoft Office, Advanced Excel (Macros) and Access (SQL language) knowledge.</li>
+			<li>Intermediate knowledge of HTML5, CSS3, JavaScript, PHP and AJAX.</li>
+			<li>Intermediate knowledge of Bootstrap 4, Angular 9 and Task automation with Grunt and Gulp.</li>
+			<li>Advanced SQL knowledge. Access, MySQL and MariaDB.</li>
+			<li>Intermediate knowledge of Python 3, Web Scraping with Python 3, C language, Windows and Linux Debian.</li>
+			<li>Advanced programmer in Micr Desktop osoft Visual Studio 2017.</li>
+			<li>Knowledge of IP Networks, Routing with Mikrotik equipment and Radio Links with Ubiquiti equipment.</li>
+			<li>Intermediate knowledge of Mobile Networks.</li>
+		</ul>
+		<h3>Contact Information</h3>
+		<p>Manuel Parra<br>
+			 Telecommunications Engineer<br>
+			 Córdoba, Spain<br>
+			 (+34) 616 35 09 54<br>
+			 <strong>manuelparra@live.com.ar</strong></p>
 	</body>
 </html>
 
