Update contact information

--- a/index.html
+++ b/index.html
@@ -180,11 +180,19 @@
 			<li>Intermediate knowledge of Mobile Networks.</li>
 		</ul>
 		<h3>Contact Information</h3>
-		<p>Manuel Parra<br>
+		<dl>
+			<dt>Manuel Parra</dt>
+			<dt>Telecommunications Engineer</dt>
+			<dt><em>Córdoba, Spain</em></dt>
+			<dt><em>(+34) 616 35 09 54</em></dt>
+			<br>
+			<dt><strong>manuelparra@live.com.ar</strong></dt>
+		</dl>
+		<!--<p>Manuel Parra<br>
 			 Telecommunications Engineer<br>
 			 Córdoba, Spain<br>
 			 (+34) 616 35 09 54<br>
-			 <strong>manuelparra@live.com.ar</strong></p>
+			 <strong>manuelparra@live.com.ar</strong></p> -->
 	</body>
 </html>
 
