fixed some issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Sitio Web Personal de Manuel Parra Moncayo.">
@@ -188,11 +188,6 @@
 			<br>
 			<dt><strong>manuelparra@live.com.ar</strong></dt>
 		</dl>
-		<!--<p>Manuel Parra<br>
-			 Telecommunications Engineer<br>
-			 Córdoba, Spain<br>
-			 (+34) 616 35 09 54<br>
-			 <strong>manuelparra@live.com.ar</strong></p> -->
 	</body>
 </html>
 
