I corrected spelling errors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="description" content="Sitio Web Personal de Manuel Parra Moncayo.">
-		<meta name="keywords" content="HTML, CSS, JavaScript">
+		<meta name="keywords" content="Software, Developer, Engineering, Telecommunications">
 		<meta name="author" content="Manuel Parra">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Manuel Parra's Homepage</title>
@@ -160,8 +160,8 @@
 					<em>Programming for Everybody (Getting Started with Python)</em></a>, which required approximately 4 hours/week of classes and obtained a grade of 100%.
 				<ul>
 					<li>
-						<a href="https://www.coursera.org/learn/python-data" target="_blank">
-							<em>https://www.coursera.org/learn/python</em></a>&nbsp;2018. Online
+						<a href="https://www.coursera.org/learn/python" target="_blank">
+							<em>University of Michigan. Coursera.</em></a>&nbsp;2018. Online
 					</li>
 				</ul>
 			</li>
@@ -183,7 +183,7 @@
 		<dl>
 			<dt>Manuel Parra</dt>
 			<dt>Telecommunications Engineer</dt>
-			<dt><em>Córdoba, Spain</em></dt>
+			<dt><em>Cordoba, Spain</em></dt>
 			<dt><em>(+34) 616 35 09 54</em></dt>
 			<br>
 			<dt><strong>manuelparra@live.com.ar</strong></dt>
